<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <POU Name="PG_Consumer" Id="{62c174cb-6994-498a-a2d1-50bf0c0b0a87}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM PG_Consumer
VAR
	i:UDINT;
	k:UDINT;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[
//NovRam to File
FOR i:= 0 TO GVL.NovRamBufferRatio-1 DO
	GVL.fbNovRamToFileRingBuffer[i](udiNovRamIndex:=i);
END_FOR

//File to DB
FOR i:=0 TO gvl.NovRamBufferRatio-1 DO
	FOR k:=0 TO GVL.FileRingBufferRatio-1 DO
		gvl.fbFileRingBufferToDB[i][k](udiNovRam_BufferIndex:=i,udiFile_Index:=k);
	END_FOR
END_FOR]]></ST>
    </Implementation>
    <LineIds Name="PG_Consumer">
      <LineId Id="164" Count="0" />
      <LineId Id="152" Count="2" />
      <LineId Id="39" Count="0" />
      <LineId Id="163" Count="0" />
      <LineId Id="160" Count="0" />
      <LineId Id="159" Count="0" />
      <LineId Id="169" Count="0" />
      <LineId Id="171" Count="1" />
      <LineId Id="162" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>